2002-04-21  Tim Musson <trmusson@ihug.co.nz>

	* pixmaps/Makefile.am:
	* pixmaps/gnect-about.png: removed
	* src/main.h: Gnect's desktop icon is now used in the About dialog,
	  consistent with gnome-games.
	* src/dialog.c: Removed Gnect's URL (it's now just in the help docs).

2002-04-20  Tim Musson <trmusson@ihug.co.nz>

	* src/gui.c: cb_gui_key_press now has a return value, fixing a bug
	    discovered by Dave in which menus couldn't be opened using the
	    keyboard.

2002-04-20  Tim Musson <trmusson@ihug.co.nz>

	* help/C/Makefile.am:
	* help/C/gnect.xml:
	* help/C/figures/mainwindow.png: Main Window figure added.

2002-04-19  Dave Neary <bolsh@gimp.org>

	* src/adjmtrx.c:
	* src/bintree.c:
	* src/connect4.c:
	* src/evaluate.c:
	* src/heurist.c:
	* src/ia_main.c:
	* src/pbsolver.c:
	* src/playgame.c:
	* src/proto.h: Ran these source files through dos2unix to
	  get rid of CRLF.

2002-04-19  Dave Neary <bolsh@gimp.org>

	* src/dialog.c:
	* src/connect4.c: Moved Giuliano's copyright message to
	  the About dialog - it really shouldn't be dumped to
	  stdout.

2002-04-19  Tim Musson <trmusson@ihug.co.nz>

	* help/C/gnect.sgml: removed
	* help/C/gnect.xml & legal.xml: new files
	* help/C/Makefile.am & gnect-C.omf: updated for the new manual.

2002-04-19  Tim Musson <trmusson@ihug.co.nz>

	* dialog.c:
	  - Removed needless test for About dialog logo.
	  - Velena's homepage missing in action - removed URL from About.
	    Was: http://www.ce.unipr.it/~gbe/velena.html
	* data/gnect.desktop.in: Changed wording in Comment field.
	* data/clean_50x50.gnect: Grid colour to new format.
	* dialog.c, gui.c, gnect.c, main.c, main.h, gfx.c, sound.c,
	  prefs.c, theme.c, brain.c:
	  - Fixed my botched indentation.

2002-04-16  Tim Musson <trmusson@ihug.co.nz>

	* data/clean_40x40_nightfall.gnect:
	  - Theme's grid colour changed to the new format.
	* dialog.c:
	  - Scorebox icon now uses gtk_image_new_from_file.
	  - Added gtk_window_set_transient_for About dialog.