@@ -1,0 +1,160 @@
+<gconfschemafile>
+
+  <schemalist>
+      <schema>
+      <key>/schemas/apps/gnect/player1</key>
+      <owner>gnect</owner>
+      <type>int</type>
+      <default>0</default>
+      <locale name="C">
+        <short>Level of Player One</short>
+        <long>Zero is human; one through four correspond to the level of the computer player.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnect/player2</key>
+      <owner>gnect</owner>
+      <type>int</type>
+      <default>2</default>
+      <locale name="C">
+        <short>Level of Player Two</short>
+        <long>Zero is human; one through four correspond to the level of the computer player.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnect/startmode</key>
+      <owner>gnect</owner>
+      <type>int</type>
+      <default>2</default>
+      <locale name="C">
+        <short>Who starts</short>
+        <long>Zero is Player One, one is Player Two, two corresponds to players taking turns, three to picking at random.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnect/theme</key>
+      <owner>gnect</owner>
+      <type>string</type>
+      <default>default.gnect</default>
+      <locale name="C">
+        <short>Theme file</short>
+        <long>Name of the theme file to use.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnect/grid</key>
+      <owner>gnect</owner>
+      <type>bool</type>
+      <default>TRUE</default>
+      <locale name="C">
+        <short>Draw grid</short>
+        <long>Whether or not to display grid lines on the game board.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnect/animate</key>
+      <owner>gnect</owner>
+      <type>bool</type>
+      <default>TRUE</default>
+      <locale name="C">
+        <short>Animate</short>
+        <long>Whether or not to use animation.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnect/wipe</key>
+      <owner>gnect</owner>
+      <type>bool</type>
+      <default>TRUE</default>
+      <locale name="C">
+        <short>Wipe effects</short>
+        <long>Whether or not to use animated wipe effects to clear the game board.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnect/sound</key>
+      <owner>gnect</owner>
+      <type>bool</type>
+      <default>TRUE</default>
+      <locale name="C">
+        <short>Sound</short>
+        <long>Whether or not to play event sounds.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnect/soundmode</key>
+      <owner>gnect</owner>
+      <type>int</type>
+      <default>1</default>
+      <locale name="C">
+        <short>Sound type</short>
+        <long>One corresponds to speaker beeps, two to audio files.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnect/keyleft</key>
+      <owner>gnect</owner>
+      <type>int</type>
+      <default>106</default>
+      <locale name="C">
+        <short>Move left</short>
+        <long>Key press to move left.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnect/keyright</key>
+      <owner>gnect</owner>
+      <type>int</type>
+      <default>108</default>
+      <locale name="C">
+        <short>Move right</short>
+        <long>Key press to move right.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnect/keydrop</key>
+      <owner>gnect</owner>
+      <type>int</type>
+      <default>107</default>
+      <locale name="C">
+        <short>Drop marble</short>
+        <long>Key press to drop a marble.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnect/verify</key>
+      <owner>gnect</owner>
+      <type>bool</type>
+      <default>TRUE</default>
+      <locale name="C">
+        <short>Verify</short>
+        <long>Whether or not to ask before quitting an unfinished game.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnect/toolbar</key>
+      <owner>gnect</owner>
+      <type>bool</type>
+      <default>FALSE</default>
+      <locale name="C">
+        <short>Show tool bar</short>
+        <long>Whether or not to show the tool bar.</long>
+      </locale>
+      </schema>
+  </schemalist>
+
+</gconfschemafile>
+
