@@ -6,6 +6,7 @@
 
 
 #include "config.h"
+#include <gconf/gconf-client.h>
 #include "main.h"
 #include "gnect.h"
 #include "prefs.h"
@@ -14,21 +15,20 @@
 #include "gfx.h"
 
 
-
 #define DEFAULT_FNAME_THEME            "default.gnect"  /* If no prefs exist, start with this theme */
-#define DEFAULT_PLAYER_1               "0"              /* Human */
-#define DEFAULT_PLAYER_2               "2"              /* Velena Engine, first level */
-#define DEFAULT_KEY_LEFT               "106"            /* j */
-#define DEFAULT_KEY_RIGHT              "108"            /* l */
-#define DEFAULT_KEY_DROP               "107"            /* k */
-#define DEFAULT_START_MODE             "2"              /* Players take turns at starting */
-#define DEFAULT_SOUND_MODE             "1"              /* Beep */
-#define DEFAULT_DO_GRIDS               "true"           /* Draw grids on background images by default */
-#define DEFAULT_DO_ANIMATE             "true"           /* Use animation by default */
-#define DEFAULT_DO_WIPES               "true"           /* Do animated wipes by default */
-#define DEFAULT_DO_TOOLBAR             "false"          /* Toolbar disabled */
-#define DEFAULT_DO_SOUND               "true"           /* Sound enabled */
-#define DEFAULT_DO_VERIFY              "true"           /* Verification dialogs enabled */
+#define DEFAULT_PLAYER_1               0                /* Human */
+#define DEFAULT_PLAYER_2               2                /* Velena Engine, first level */
+#define DEFAULT_KEY_LEFT               106              /* j */
+#define DEFAULT_KEY_RIGHT              108              /* l */
+#define DEFAULT_KEY_DROP               107              /* k */
+#define DEFAULT_START_MODE             2                /* Players take turns at starting */
+#define DEFAULT_SOUND_MODE             1                /* Beep */
+#define DEFAULT_DO_GRIDS               TRUE             /* Draw grids on background images by default */
+#define DEFAULT_DO_ANIMATE             TRUE             /* Use animation by default */
+#define DEFAULT_DO_WIPES               TRUE             /* Do animated wipes by default */
+#define DEFAULT_DO_TOOLBAR             FALSE            /* Toolbar disabled */
+#define DEFAULT_DO_SOUND               TRUE             /* Sound enabled */
+#define DEFAULT_DO_VERIFY              TRUE             /* Verification dialogs enabled */
 
 
 extern gint      debugging;
@@ -38,6 +38,7 @@ extern GtkWidget *app;
 extern Theme     *theme_base;
 extern Theme     *theme_current;
 
+GConfClient *gnect_gconf_client = NULL;
 Prefs  prefs;
 
 static Prefs  prefs_tmp;
@@ -59,16 +60,36 @@ static GtkWidget *radio_sound[2];
 
 
 static void cb_prefs_dialog_apply(GtkWidget *widget, gpointer *data);
+static void prefs_dialog_reset(void);
 
 
 
 static void
 cb_prefs_response (GtkWidget *pref_dialog, int response_id, gpointer data)
 {
-        if (response_id == GTK_RESPONSE_CLOSE) {
+        gchar *fname_help;
+
+        switch (response_id) {
+        case GTK_RESPONSE_ACCEPT :
                 cb_prefs_dialog_apply (pref_dialog, (gpointer)-1);
-                gtk_widget_destroy (dlg_prefs);
-                dlg_prefs = NULL;
+                gtk_widget_hide (dlg_prefs);
+                break;
+        case GTK_RESPONSE_APPLY :
+                cb_prefs_dialog_apply (pref_dialog, (gpointer)-1);
+                break;
+        case GTK_RESPONSE_CLOSE :
+                gtk_widget_hide (dlg_prefs);
+                break;
+        case GTK_RESPONSE_HELP :
+                fname_help = gnome_program_locate_file (NULL, GNOME_FILE_DOMAIN_HELP, "usage.html", FALSE, NULL);
+                if (fname_help) {
+                        gchar *url_help;
+                        url_help = g_strconcat ("file:", fname_help, "#prefsdialog", NULL);
+                        gnome_help_display_uri (url_help, NULL);
+                        g_free (url_help);
+                        g_free (fname_help);
+                }
+                break;
         }
         return;
 }
@@ -78,31 +99,133 @@ cb_prefs_response (GtkWidget *pref_dialog, int response_id, gpointer data)
 static void
 prefs_check (void)
 {
+        /* sanity check important values got from prefs file */
         if (prefs.start_mode < 0 || prefs.start_mode > 3) {
-                prefs.start_mode = atoi (DEFAULT_START_MODE);
+                prefs.start_mode = DEFAULT_START_MODE;
                 prefs.changed = TRUE;
         }
         if (prefs.player1 < 0 || prefs.player1 > 4) {
-                prefs.player1 = atoi (DEFAULT_PLAYER_1);
+                prefs.player1 = DEFAULT_PLAYER_1;
                 prefs.changed = TRUE;
         }
         if (prefs.player2 < 0 || prefs.player2 > 4) {
-                prefs.player2 = atoi (DEFAULT_PLAYER_2);
+                prefs.player2 = DEFAULT_PLAYER_2;
                 prefs.changed = TRUE;
         }
-        if (prefs.sound_mode < 0 || prefs.sound_mode > 2) {
-                prefs.sound_mode = atoi (DEFAULT_SOUND_MODE);
-                prefs.changed = TRUE;
-        }
-
-        /* update prefs from gnect < 1.2.4 */
-        if (prefs.sound_mode == SOUND_MODE_NONE) {
-                prefs.sound_mode = atoi (DEFAULT_SOUND_MODE);
-                prefs.do_sound = FALSE;
+        if (prefs.sound_mode < 1 || prefs.sound_mode > 2) {
+                prefs.sound_mode = DEFAULT_SOUND_MODE;
                 prefs.changed = TRUE;
         }
 }
 
+
+
+static gint
+gnect_gconf_get_int (gchar *key, gint default_int)
+{
+        /*
+         * First checks gconf, then schema, then defaults to the
+         * value passed. (Code & comment lifted from gataxx.)
+         */
+        GConfValue *value = NULL;
+        GConfValue *schema_value = NULL;
+        gint retval;
+
+        value = gconf_client_get (gnect_gconf_client, key, NULL);
+
+        if (value == NULL) {
+                return default_int;
+        }
+        if (value->type == GCONF_VALUE_INT) {
+                retval = gconf_value_get_int (value);
+                gconf_value_free (value);
+        }
+        else {
+                schema_value = gconf_client_get_default_from_schema
+                               (gnect_gconf_client, key, NULL);
+                if (schema_value == NULL) {
+                        retval = default_int;
+                }
+                else {
+                        retval = gconf_value_get_int (schema_value);
+                }
+                gconf_value_free (value);
+                gconf_value_free (schema_value);
+        }
+        return retval;
+}
+
+
+
+static gboolean
+gnect_gconf_get_bool (gchar *key, gboolean default_bool)
+{
+        /* (Code lifted from gataxx) */
+  
+        GConfValue *value = NULL;
+        GConfValue *schema_value = NULL;
+        gboolean retval;
+
+        value = gconf_client_get (gnect_gconf_client, key, NULL);
+        if (value == NULL) {
+                return default_bool;
+        }
+        if (value->type == GCONF_VALUE_BOOL) {
+                retval = gconf_value_get_bool (value);
+                gconf_value_free (value);
+        }
+        else {
+                schema_value = gconf_client_get_default_from_schema
+                               (gnect_gconf_client, key, NULL);
+                if (schema_value == NULL) {
+                        retval = default_bool;
+                }
+                else {
+                        retval = gconf_value_get_bool (schema_value);
+                }
+                gconf_value_free (value);
+                gconf_value_free (schema_value);
+        }
+        return retval;
+}
+
+
+
+static gchar *
+gnect_gconf_get_string (gchar *key)
+{
+        /*
+         * First checks gconf, then schema. Returns NULL if not found in
+         * either. (Code & comment lifted from gataxx.)
+         */
+
+        GConfValue *value = NULL;
+        GConfValue *schema_value = NULL;
+        gchar *retval = NULL;
+
+        value = gconf_client_get (gnect_gconf_client, key, NULL);
+        if (value == NULL) {
+                return NULL;
+        }
+        if (value->type == GCONF_VALUE_STRING) {
+                retval = g_strdup (gconf_value_get_string (value));
+                gconf_value_free (value);
+        }
+        else {
+                schema_value = gconf_client_get_default_from_schema
+                               (gnect_gconf_client, key, NULL);
+                if (schema_value == NULL) {
+                        retval = NULL;
+                }
+                else {
+                        retval = g_strdup (gconf_value_get_string (schema_value));
+                }
+                gconf_value_free (value);
+                gconf_value_free (schema_value);
+        }
+        return retval;
+}
+                                                                                                                                                                                                            
 
 
 void
@@ -112,20 +235,21 @@ prefs_get (void)
 
         prefs.changed = FALSE;
 
-        prefs.fname_theme   = gnome_config_get_string ("/" APPNAME "/Preferences/Theme="  DEFAULT_FNAME_THEME);
-        prefs.player1       = gnome_config_get_int ("/" APPNAME "/Preferences/Player1="   DEFAULT_PLAYER_1);
-        prefs.player2       = gnome_config_get_int ("/" APPNAME "/Preferences/Player2="   DEFAULT_PLAYER_2);
-        prefs.key[KEY_LEFT] = gnome_config_get_int ("/" APPNAME "/Preferences/KeyLeft="   DEFAULT_KEY_LEFT);
-        prefs.key[KEY_RIGHT]= gnome_config_get_int ("/" APPNAME "/Preferences/KeyRight="  DEFAULT_KEY_RIGHT);
-        prefs.key[KEY_DROP] = gnome_config_get_int ("/" APPNAME "/Preferences/KeyDrop="   DEFAULT_KEY_DROP);
-        prefs.sound_mode    = gnome_config_get_int ("/" APPNAME "/Preferences/SoundMode=" DEFAULT_SOUND_MODE);
-        prefs.start_mode    = gnome_config_get_int ("/" APPNAME "/Preferences/StartMode=" DEFAULT_START_MODE);
-        prefs.do_animate    = gnome_config_get_bool ("/" APPNAME "/Preferences/Animate="  DEFAULT_DO_ANIMATE);
-        prefs.do_wipes      = gnome_config_get_bool ("/" APPNAME "/Preferences/Wipes="    DEFAULT_DO_WIPES);
-        prefs.do_grids      = gnome_config_get_bool ("/" APPNAME "/Preferences/Grids="    DEFAULT_DO_GRIDS);
-        prefs.do_toolbar    = gnome_config_get_bool ("/" APPNAME "/Preferences/Toolbar="  DEFAULT_DO_TOOLBAR);
-        prefs.do_sound      = gnome_config_get_bool ("/" APPNAME "/Preferences/Sound="    DEFAULT_DO_SOUND);
-        prefs.do_verify     = gnome_config_get_bool ("/" APPNAME "/Preferences/Verify="   DEFAULT_DO_VERIFY);
+        prefs.player1 = gnect_gconf_get_int ("/apps/gnect/player1", DEFAULT_PLAYER_1);
+        prefs.player2 = gnect_gconf_get_int ("/apps/gnect/player2", DEFAULT_PLAYER_2);
+        prefs.start_mode = gnect_gconf_get_int ("/apps/gnect/startmode", DEFAULT_START_MODE);
+        prefs.fname_theme = gnect_gconf_get_string ("/apps/gnect/theme");
+        if (!prefs.fname_theme) prefs.fname_theme = g_strdup (DEFAULT_FNAME_THEME);
+        prefs.do_grids = gnect_gconf_get_bool ("/apps/gnect/grid", DEFAULT_DO_GRIDS);
+        prefs.do_animate = gnect_gconf_get_bool ("/apps/gnect/animate", DEFAULT_DO_ANIMATE);
+        prefs.do_wipes = gnect_gconf_get_bool ("/apps/gnect/wipe", DEFAULT_DO_WIPES);
+        prefs.do_sound = gnect_gconf_get_bool ("/apps/gnect/sound", DEFAULT_DO_SOUND);
+        prefs.sound_mode = gnect_gconf_get_int ("/apps/gnect/soundmode", DEFAULT_SOUND_MODE);
+        prefs.key[KEY_LEFT] = gnect_gconf_get_int ("/apps/gnect/keyleft", DEFAULT_KEY_LEFT);
+        prefs.key[KEY_RIGHT] = gnect_gconf_get_int ("/apps/gnect/keyright", DEFAULT_KEY_RIGHT);
+        prefs.key[KEY_DROP] = gnect_gconf_get_int ("/apps/gnect/keydrop", DEFAULT_KEY_DROP);
+        prefs.do_verify = gnect_gconf_get_bool ("/apps/gnect/verify", DEFAULT_DO_VERIFY);
+        prefs.do_toolbar = gnect_gconf_get_bool ("/apps/gnect/toolbar", DEFAULT_DO_TOOLBAR);
 
         prefs.descr_player1 = NULL;
         prefs.descr_player2 = NULL;
@@ -142,22 +266,68 @@ prefs_save (void)
 
         DEBUG_PRINT(1, "prefs_save\n");
 
-        gnome_config_set_string ("/" APPNAME "/Preferences/Theme",  prefs.fname_theme);
-        gnome_config_set_int ("/" APPNAME "/Preferences/Player1",   prefs.player1);
-        gnome_config_set_int ("/" APPNAME "/Preferences/Player2",   prefs.player2);
-        gnome_config_set_int ("/" APPNAME "/Preferences/KeyLeft",   prefs.key[KEY_LEFT]);
-        gnome_config_set_int ("/" APPNAME "/Preferences/KeyRight",  prefs.key[KEY_RIGHT]);
-        gnome_config_set_int ("/" APPNAME "/Preferences/KeyDrop",   prefs.key[KEY_DROP]);
-        gnome_config_set_int ("/" APPNAME "/Preferences/SoundMode", prefs.sound_mode);
-        gnome_config_set_int ("/" APPNAME "/Preferences/StartMode", prefs.start_mode);
-        gnome_config_set_bool ("/" APPNAME "/Preferences/Animate",  prefs.do_animate);
-        gnome_config_set_bool ("/" APPNAME "/Preferences/Wipes",    prefs.do_wipes);
-        gnome_config_set_bool ("/" APPNAME "/Preferences/Grids",    prefs.do_grids);
-        gnome_config_set_bool ("/" APPNAME "/Preferences/Toolbar",  prefs.do_toolbar);
-        gnome_config_set_bool ("/" APPNAME "/Preferences/Sound",    prefs.do_sound);
-        gnome_config_set_bool ("/" APPNAME "/Preferences/Verify",   prefs.do_verify);
+        gconf_client_set_int (gnect_gconf_client, "/apps/gnect/player1",   prefs.player1, NULL);
+        gconf_client_set_int (gnect_gconf_client, "/apps/gnect/player2",   prefs.player2, NULL);
+        gconf_client_set_int (gnect_gconf_client, "/apps/gnect/startmode", prefs.start_mode, NULL);
+        gconf_client_set_string (gnect_gconf_client, "/apps/gnect/theme",  prefs.fname_theme, NULL);
+        gconf_client_set_bool (gnect_gconf_client, "/apps/gnect/grid",     prefs.do_grids, NULL);
+        gconf_client_set_bool (gnect_gconf_client, "/apps/gnect/animate",  prefs.do_animate, NULL);
+        gconf_client_set_bool (gnect_gconf_client, "/apps/gnect/wipe",     prefs.do_wipes, NULL);
+        gconf_client_set_bool (gnect_gconf_client, "/apps/gnect/sound",    prefs.do_sound, NULL);
+        gconf_client_set_int (gnect_gconf_client, "/apps/gnect/soundmode", prefs.sound_mode, NULL);
+        gconf_client_set_int (gnect_gconf_client, "/apps/gnect/keyleft",   prefs.key[KEY_LEFT], NULL);
+        gconf_client_set_int (gnect_gconf_client, "/apps/gnect/keyright",  prefs.key[KEY_RIGHT], NULL);
+        gconf_client_set_int (gnect_gconf_client, "/apps/gnect/keydrop",   prefs.key[KEY_DROP], NULL);
+        gconf_client_set_bool (gnect_gconf_client, "/apps/gnect/verify",   prefs.do_verify, NULL);
+        gconf_client_set_bool (gnect_gconf_client, "/apps/gnect/toolbar",  prefs.do_toolbar, NULL);
+}
 
-        gnome_config_sync ();
+
+
+static void
+cb_prefs_gconf_changed (GConfClient *tmp_client, guint cnx_id,
+                        GConfEntry *tmp_entry, gpointer tmp_data)
+{
+        /* FIXME: This'll end a game in progress without asking,
+         * if it works at all. Untested.
+         */
+
+        DEBUG_PRINT(1, "cb_prefs_gconf_changed: FIXME\n");
+
+        g_free (prefs.fname_theme);
+        prefs_get ();
+
+        if (dlg_prefs) prefs_dialog_reset ();
+        gnect_reset (FALSE);
+        gnect_reset_display ();
+        gnect_reset_scores ();
+        gui_set_status_prompt_new_game (STATUS_MSG_SET);
+        theme_load (theme_get_ptr_from_fname (prefs.fname_theme));
+
+}
+
+
+
+void
+prefs_init (gint argc, gchar **argv)
+{
+        gconf_init (argc, argv, NULL);
+        gnect_gconf_client = gconf_client_get_default ();
+        gconf_client_add_dir (gnect_gconf_client, "/apps/gnect",
+                              GCONF_CLIENT_PRELOAD_NONE, NULL);
+        gconf_client_notify_add (gnect_gconf_client, "/apps/gnect",
+                                cb_prefs_gconf_changed, NULL, NULL, NULL);
+
+        prefs_get ();
+}
+
+  
+  
+void
+prefs_free (void)
+{
+        g_free (prefs.fname_theme);
+        g_object_unref (G_OBJECT(gnect_gconf_client));
 }
 
 
@@ -509,29 +679,6 @@ prefs_dialog_fill_theme_menu (void)
 
 
 
-static void
-cb_prefs_dialog_help (GtkWidget *widget, gpointer *data)
-{
-        gchar *fname_help = gnome_program_locate_file (NULL,
-                                                       GNOME_FILE_DOMAIN_HELP,
-                                                       "usage.html#prefsdialog",
-                                                       FALSE, NULL);
-
-        if (fname_help) {
-
-                gchar *url_help;
-
-                url_help = g_strconcat ("file:", fname_help, NULL);
-                gnome_help_display_uri (url_help, NULL);
-                g_free (url_help);
-                g_free (fname_help);
-
-        }
-}
-
-
-
-
 static gchar *
 prefs_dialog_get_player_selection_label (gint n)
 {
@@ -599,8 +746,10 @@ prefs_dialog_create (void)
         dlg_prefs = gtk_dialog_new_with_buttons (_("Gnect Preferences"),
                                                  GTK_WINDOW (app),
                                                  GTK_DIALOG_MODAL | GTK_DIALOG_DESTROY_WITH_PARENT,
-                                                 GTK_STOCK_CLOSE,
-                                                 GTK_RESPONSE_CLOSE,
+                                                 GTK_STOCK_HELP, GTK_RESPONSE_HELP,
+                                                 GTK_STOCK_OK, GTK_RESPONSE_ACCEPT,
+                                                 GTK_STOCK_APPLY, GTK_RESPONSE_APPLY,
+                                                 GTK_STOCK_CLOSE, GTK_RESPONSE_CLOSE,
                                                  NULL);
 
         action_area = gtk_notebook_new ();
